--- a/src/components/title-city/title-city.css
+++ b/src/components/title-city/title-city.css
@@ -4,7 +4,7 @@
 .sortby { } 
 .sortby.select-sec label { color: #212121; font-weight: 600; } 
 .sortby.select-sec select { background-color: #EFF0F2; box-shadow: none; border-color: #8698A9; background-image: url('/img/icons/line.png'),url('/img/icons/arrow-down.png'); background-size: 1px, 10px; background-position: 20px center,5px center; line-height: 24px; font-size: 12px; color: #43515D; padding: 0 8px; } 
-.show-filters { background-image: url('/img/icons/filter.png'); color: #798694; font-size: 12px; border: 1px solid #C1C9D2; border-radius: 4px; line-height: 40px; background-repeat: no-repeat; padding: 0 30px 0 12px; background-position: calc(100% - 10px) 13px; display: none; } 
+.show-filters { background-image: url('/img/icons/filter.png'); color: #798694; font-size: 12px; border: 1px solid #C1C9D2; border-radius: 4px; line-height: 40px; background-repeat: no-repeat; padding: 0 30px 0 12px; background-position: calc(100% - 10px) 13px; display: none;cursor: pointer;} 
 .actions-sec { display: flex; align-items: center; } 
  .title-city-div .content { } 
 @media screen and (max-width:999px){
