--- a/src/components/booking-page/booking-page.css
+++ b/src/components/booking-page/booking-page.css
@@ -126,3 +126,11 @@ input[type=number]::-webkit-outer-spin-button { -webkit-appearance: none; margin
 .dateRange .DayPicker-Weekday{font-size: 11px;color: #798694;}
 .dateRange .DayPicker-Weekday abbr{text-decoration: none;}
 .dateRange .DayPicker-Caption{color:#45464A;font-size: 14px;}
+
+@media screen and (max-width:999px) {
+    .price-total .sticky{position: static !important;}
+    .booking-content{display: block;}
+    .booking-form{margin: 0;}
+    .PriceTotla{position: fixed;top:100%;width: auto;left: 0;right: 0;margin-top: -94px;z-index: 1;}
+    .price-total > div > div {transform:none !important;}
+}
