--- a/src/components/booking-page/booking-page.css
+++ b/src/components/booking-page/booking-page.css
@@ -77,7 +77,7 @@
 .CustomerData .entry-form { padding: 20px 0; } 
 .CustomerData .entry-form .form-group { margin-top: 20px; padding: 0 20px; } 
 .CustomerData .entry-form .form-group:first-child { margin-top: 0; } 
-.CustomerData .entry-form .form-group label { margin-bottom: 5px; } 
+.CustomerData .entry-form .form-group label { margin-bottom: 2px;font-size: 12px;}
 .CustomerData .entry-form .form-group input,.CustomerData .entry-form .form-group textarea { background: #FFFFFF; border: 1px solid #C1C9D2; box-shadow: inset 0 1px 3px 0 rgba(0,0,0,0.15); border-radius: 4px; line-height: 20px; padding: 9px 15px; -webkit-appearance: none; margin: 0; width: 100%; max-width: 310px; } 
 input[type=number]::-webkit-inner-spin-button, 
 input[type=number]::-webkit-outer-spin-button { -webkit-appearance: none; margin: 0; } 
