--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -228,3 +228,39 @@ input[type=date]::-webkit-datetime-edit-year-field {display:none;}
 .manage-bookings .table .booking-check .check img{display: block;margin: 0 auto;}
 .manage-bookings .table .booking-check .check span{position: absolute;font-size: 9px;color: #00A651;left: 0;right: 0;top: 100%;opacity: 0;pointer-events: none;transition: all .2s;}
 .manage-bookings .table .booking-check .check:hover span{opacity:1;}
+
+.single-booking{position: fixed;top: 0;right: 0;left: 0;bottom: 0;background-color: rgba(0, 0, 0, 0.9);z-index: 1;height: 100vh;overflow: scroll;padding: 30px 0;}
+.single-booking > .content{background-color: #fff;border-radius: 4px;max-width: 760px;margin: 35px auto;position: relative;}
+.single-booking .content .close {height: 16px;width: 16px;position: relative;position: absolute;top: -15px;right: -15px;cursor: pointer;} 
+.single-booking .content .close::before { content:''; position: absolute; top: 0; left: 0; width: 100%; height: 2px; background: #fff; transform: rotate(135deg);} 
+.single-booking .content .close::after { content: ''; position: absolute; top: 0; left: 0; width: 100%; height: 2px; background: #fff; transform: rotate(-135deg);} 
+.single-booking .content >.head{padding: 20px;border-bottom: 1px solid #DBDDE0;display: flex;align-items: center;justify-content: space-between;}
+.single-booking .content .head .booking-date{ }
+.single-booking .content .head .booking-date .status{background-color: #F5A623;border-radius: 2px;color: #fff;font-size: 12px;font-weight: 600;padding: 0 10px;line-height: 20px;display: inline-block;}
+.single-booking .content .head .booking-date p{font-size: 12px;font-weight: 400;}
+.single-booking .content .head .action{ }
+.single-booking .content .head .action a{line-height: 35px;color: #fff;background-color: #000;border-radius: 4px;padding: 0 30px 0 16px;margin-right: 10px;font-size: 12px;font-weight: 700;display: inline-block;background-repeat: no-repeat;background-size: 16px;background-position: calc(100% - 8px) center;transition: all .2s;}
+.single-booking .content .head .action a.confirm{background-color: #00a851;background-image: url('/img/icons/email-material.png');}
+.single-booking .content .head .action a.confirm:hover{background-color: #00994a;}
+.single-booking .content .head .action a.cancel{background-color: #EB6361;background-image: url('/img/icons/cancel-material.png');}
+.single-booking .content .head .action a.cancel:hover{background-color: #ea5553;}
+.single-booking .content .client-data{padding: 10px 20px;font-size: 0;border-bottom: 1px solid #DBDDE0;}
+.single-booking .content .client-data h4{font-size: 12px;font-weight: 700;}
+.single-booking .content .client-data p{font-size: 12px;font-weight: 600;}
+.single-booking .content .box{padding: 10px 20px 30px 30px;display: flex;}
+.single-booking .content .box .booking-data{width: calc(100% - 300px);}
+.single-booking .content .box .booking-data h4{font-size: 12px;font-weight: 700;}
+.single-booking .content .box .booking-data .hotel{display: flex;align-items: flex-start;margin-bottom: 10px;}
+.single-booking .content .box .booking-data .hotel .pic{max-width: 190px;border-radius: 4px;overflow: hidden;}
+.single-booking .content .box .booking-data .hotel .pic img{display: block;}
+.single-booking .content .box .booking-data .hotel .Info{margin-right: 10px;}
+.single-booking .content .box .booking-data .hotel .Info .starts{height: auto;margin-bottom: 5px;}
+.single-booking .content .box .booking-data .hotel .Info h2{font-size: 16px;font-weight: 700;}
+.single-booking .content .box .booking-data .travel-date{color: #00A651;font-size: 13px;font-weight: 600;margin-bottom: 30px;}
+.single-booking .content .box .booking-data .client-msg{ }
+.single-booking .content .box .booking-data .client-msg h4{ }
+.single-booking .content .box .booking-data .client-msg p{font-size: 13px;font-weight: 500;}
+.single-booking .content .box .booking-data .client-msg p~p{margin-top:15px;}
+.single-booking .content .box .PriceTotla{margin-right: 20px;}
+.single-booking .PriceTotla .content .item{padding: 15px;}
+
